[package]
name = "busy-today-gate"
authors = ["Xavrax <matedahlke@gmail.com>"]
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
cucumber_rust = { version="0.8.3", features=["macros"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
serde_json = "1.0"
portpicker = "0.1.0"